progs/tests/union_types_simple_faulty.sy
f :: fn a:bool -> int | void {
    if a {
        ret 1
    } else {
        ret "hello!"
    }
}

g :: fn a:bool -> int | (bool, bool) {
    if a {
        ret 1
    } else {
        ret (true, 1.0)
    }
}

start :: fn {
    0 <=> f! true
    0.0 <=> f! false
    ("hello!", "there") <=> g! false
    1 <=> g! true
    f(true) <=> g(true)
}

// error: #TypeMismatch(_, _)
// error: #TypeMismatch(_, _)
// error: #TypeError(_, _)
// error: #TypeMismatch(_, _)
// error: #TypeError(_, _)
// error: #TypeMismatch(_, _)
